Fixed shortening of labels and position of cancel and submit buttons visibility issues.

--- a/chrome-plugin/css/extension.css
+++ b/chrome-plugin/css/extension.css
@@ -156,12 +156,18 @@
 .voice-sugggesion-bullet li{
 	position: relative;
 	list-style-type: none;
-	padding: 5px 0px 5px 2px;
+	/*padding: 5px 0px 5px 2px;*/
 	color: #7F7F7F;
 	font-size: 14px;
 	cursor: pointer;
-	overflow-wrap: break-word;
-	word-wrap: break-word;
+	/*overflow-wrap: break-word;
+	word-wrap: break-word;*/
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+	overflow: hidden;
+	padding-top: 10px;
 }
 .voice-sugggesion-bullet li:before{
 	content: "";
